--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -1,4 +1,12 @@
 html {
     scroll-behavior: smooth;
+  
   }
   
+  body{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+  }
